# tagbase-server

./: .gitattributes  .gitignore  .hadolint.yaml  .openapi-generator-ignore  .pre-commit-config.yaml  .project  .pydevproject  .spectral.yaml  .thresholdrc  .validaterc  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile-postgres  Dockerfile-tagbase  README.md  coverage.xml  docker-compose.test.yml  docker-compose.yml  getting_started.ipynb  ingest_controller.py  openapi.yaml  precommit  requirements.txt  setup.py  tags_controller.py
tagbase_server/: .coveragerc  .dockerignore  .gitignore  .openapi-generator-ignore  Dockerfile  README.md  coverage.xml  gunicorn.conf.py  pylock.toml  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
tagbase_server/.openapi-generator/: FILES
tagbase_server/data/: 159903_2012_117464_eTUFF.txt
tagbase_server/data.bk/: 159924_2013_128419_eTUFF_hdr.txt  160189_2009_95949_eTUFF_hdr.txt  eTUFF-tuna590051-debug.txt
tagbase_server/tagbase_server/: __main__.py  db_utils.py  encoder.py  log_config.py  problem.py  telemetry.py  typing_utils.py  util.py
tagbase_server/tagbase_server/controllers/: events_controller.py  ingest_controller.py  tag_controller.py  tags_controller.py
tagbase_server/tagbase_server/models/: __init__.py  base_model_.py  error.py  error_container.py  event200.py  event_put200.py  events200.py  events200_events_inner.py  ingest200.py  problem.py  response200.py  response500.py  success.py  tag.py  tag200.py  tag200_collection.py  tag200_summary.py  tag200_tag.py  tag200_tag_inner.py  tag_delete200.py  tag_put200.py  tag_submission.py  tags200.py  tags200_tags_inner.py
tagbase_server/tagbase_server/openapi/: openapi.yaml
tagbase_server/tagbase_server/test/: __init__.py  conftest.py  helpers.py  test_app_bootstrap.py  test_events_controller.py  test_ingest.py  test_ingest_controller.py  (+7 more)
(+115 files in other folders)
