[build-system]
requires = [
    "connexion[swagger-ui]==2.13.1",
    "flask[async]==2.1.2",
    "gunicorn==20.1.0",
    "pandas>=1.4.2",
    "parmap>=1.5.3",
    "patool>=1.12",
    "psycopg2-binary==2.9.3",
    "python_dateutil>=2.6.0",
    "pytz>=2021.3",
    "pyunpack>=0.3",
    "setuptools>=21.0.0",
    "tzlocal>=4.1",
    "werkzeug==2.1.2",
]
build-backend = "setuptools.build_meta"